# Infinitarium

./: .gitattributes  .gitmodules  CMakeLists.txt  INSTALL  LICENSE  README.md  config.in  main.cpp
Engine/: Application.cpp  Application.hpp  ApplicationWindow.cpp  ApplicationWindow.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ConsoleInterface.cpp  ConsoleInterface.hpp  CoordinateSystem.cpp  CoordinateSystem.hpp  DataBuffer.cpp  DataBuffer.hpp  DataPack.cpp  DataPack.hpp  Database.cpp  Database.hpp  Delegate.hpp  EngineInterface.hpp  EventSampler.cpp  EventSampler.hpp  IImGUI.cpp  IImGUI.hpp  ImGUI.cpp  ImGUI.hpp  Module.cpp  Module.hpp  MotionController.cpp  MotionController.hpp  MotionControllerOrbit.cpp  MotionControllerOrbit.hpp  OISBridge.mm  ObjectStore.cpp  ObjectStore.hpp  Pipeline.cpp  Pipeline.hpp  PipelineState.cpp  PipelineState.hpp  Platform.cpp  Platform.hpp  (+39 more)
Engine/ImGUI/examples/: imgui_impl_vulkan.cpp
Engine/Terrain/: Cesium.cpp  Cesium.hpp  CriticalAssetManager.cpp  CriticalAssetManager.hpp  GenericAssetAccessor.cpp  GenericAssetAccessor.hpp  GenericIOManager.cpp  GenericIOManager.hpp  HttpAssetAccessor.cpp  HttpAssetAccessor.hpp  HttpManager.cpp  HttpManager.hpp  LocalFileManager.cpp  LocalFileManager.hpp  RenderResourcesPreparer.cpp  RenderResourcesPreparer.hpp  TaskProcessor.cpp  TaskProcessor.hpp
Frameworks/: libOIS.dylib  libboost_python37.dylib  libboost_serialization.dylib
ImGui/: CMakeLists.txt
ImGui/examples/: imgui_impl_glfw.cpp
Infinitarium.xcodeproj/: project.pbxproj
Infinitarium.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Infinitarium.xcodeproj/project.xcworkspace/xcuserdata/trystan.xcuserdatad/: UserInterfaceState.xcuserstate
Infinitarium.xcodeproj/xcuserdata/trystan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Infinitarium.xcodeproj/xcuserdata/trystan.xcuserdatad/xcschemes/: xcschememanagement.plist
Metal/: AppDelegate.h  AppDelegate.m  CameraMetal.h  CameraMetal.mm  EngineImpl.hpp  EngineImpl.mm  GameViewController.h  GameViewController.m  GameViewController.mm  Info.plist  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  SimulationView.h  SimulationView.m  Stub.mm
Platform/: OISBridge.hpp  Platform.cpp  Platform.hpp  main.cpp
Renderers/Metal/: CMakeLists.txt  DataBuffer.h  DataBuffer.mm  EngineImpl.hpp  EngineImpl.mm  RenderCommand.h  RenderCommand.mm  RenderContext.h  RenderContext.mm  RenderPass.h  RenderPass.mm  RenderProgram.h  RenderProgram.mm  RenderState.h  RenderState.mm  ShaderTypes.h  Shaders.metal  Texture.hpp  Texture.mm  UniformMap.h  default.metal  sprite.metal  star3d.metal  starsDefault.metal  stars_no_plx.metal
Renderers/Vulkan/: Application.cpp  Application.hpp  ApplicationWindow.cpp  ApplicationWindow.hpp  CMakeLists.txt  DataBuffer.cpp  DataBuffer.hpp  EventSampler.cpp  EventSampler.hpp  FXAA.frag.glsl  FXAA.vert.glsl  ImGUI.cpp  ImGUI.hpp  Image.cpp  Image.hpp  OpenXRContext.cpp  OpenXRContext.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderContext.cpp  RenderContext.hpp  RenderPass.cpp  RenderPass.hpp  RenderProgram.cpp  RenderProgram.hpp  RenderState.cpp  RenderState.hpp  RenderTarget.cpp  RenderTarget.hpp  Texture.cpp  Texture.hpp  UniformMap.h  bounce.frag.glsl  bounce.vert.glsl  combine.frag.glsl  combine.vert.glsl  default.frag.glsl  default.glsl.frag  default.vert.glsl  horzBlur.frag.glsl  (+20 more)
UI/: CMakeLists.txt  defaultOverlay.html  interpreter.js  manipulator.js  simple-console.css  simple-console.js
data/: CMakeLists.txt  empty.ieb  hip2.ieb  infinitarium.db  sphere.ieb  sprite.ieb
data/Linux/: empty.ieb  hip2.ieb  imgui.ieb  sphere.ieb  sprite.ieb  tyco2.ieb
data/OSX/: empty.ieb  hip2.ieb  imgui.ieb  radiantBody.ieb  sol_base.ieb  sphere.ieb  sprite.ieb  tyco2.ieb
data/Windows/: empty.ieb  hip2.ieb  imgui.ieb  radiantBody.ieb  sphere.ieb  sprite.ieb  tyco2.ieb
docs/: index.html
mechanics/: CMakeLists.txt  Calendar.cpp  Calendar.hpp  OrbitalFactory.cpp  OrbitalFactory.hpp
python/: BlackBodyParser.py  bbr_color_D58.html  common_star_names.txt  coordinate_systems.py  empty.py  examples.py  hipparcos2_import.py  imGui.py  import_common.py  radiantBody.py  readme.txt  sol_base.py  spheroid.py  sprite.py  test_export.py  tycho2_import.py
python/util/: guassian_kernel.py
